SFDC Automation/src/objects/Solution_Interest_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Solutions_Interest__c</fullName>
        <label>Solutions Interest</label>
        <referenceTo>Solutions_Interest__c</referenceTo>
        <relationshipLabel>Solution Interest Details</relationshipLabel>
        <relationshipName>Solution_Interest_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Vehicle_Name__c</fullName>
        <label>Vehicle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Type__c</fullName>
        <label>Vehicle Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Solution Interest Detail</label>
    <nameField>
        <label>Solution Interest Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solution Interest Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>